fix: Stop elements from overflowing width

--- a/Resume/css/style.css
+++ b/Resume/css/style.css
@@ -84,6 +84,9 @@ main {
     margin-top: 40px;
 }
 
+.no-right-margin {
+    margin-right: 0 !important;
+}
 
 /*colors*/
 
